# Fizika

./: CMakeLists.txt  NOTES.md  README.md  main.cpp
include/: Shader.hpp  VertexArray.hpp  VertexBufferLayout.hpp
include/databuild/: DataBuild.hpp  DataBuildState.hpp  Pipeline.hpp
include/fdatabuild/: FDataBuild.hpp  FDataBuildState.hpp
include/fdatabuild/modifiers/: GeomerySegmentModifier.hpp
include/graphics/: Camera.hpp  FrameBuffer.hpp  IndexBuffer.hpp  Light.hpp  LightManager.hpp  Material.hpp  Mesh.hpp  Model.hpp  Shader.hpp  Texture.hpp  Transform.hpp  VertexArray.hpp  VertexBuffer.hpp  VertexBufferLayout.hpp  Window.hpp
include/graphics/gizmo/: AxisGizmo.hpp
include/input/: Input.hpp
include/objects/: BoundaryCube.hpp  Box.hpp  CardboardBox.hpp  Cow.hpp  Plane.hpp  Spring.hpp
include/simulation/: Ball.hpp  Bunny.hpp  Cube.hpp  EnergyPanel.hpp  EnergyPlot.hpp  Simulation.hpp
include/util/: XML.hpp  log.hpp  math.hpp  strings.hpp
res/: base-flat.mat  base-texture.mat  base.frag  base.mat  base.vert
res/databuild/: databuild_sample.xml  plane.xml
res/fdatabuild/: fdatabuild_sample.xml
res/materials/: base-smooth.mat  base-texture-compute-normals.mat  databuild_sample.mat
res/models/: process.py
res/shaders/: axisgizmo.frag  axisgizmo.vert  base-flat.frag  base-flat.vert  base-smooth.frag  base-smooth.vert  base-texture.frag  base-texture.vert  base.frag  base.vert  shadow.frag  shadow.vert
src/: Shader.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBufferLayout.cpp
src/databuild/: DataBuild.cpp  Pipeline.cpp  main.cpp
src/fdatabuild/: FDataBuild.cpp  main.cpp
src/fdatabuild/modifiers/: GeometrySegmentModifier.cpp
src/graphics/: Camera.cpp  FrameBuffer.cpp  IndexBuffer.cpp  Light.cpp  LightManager.cpp  Material.cpp  Mesh.cpp  Model.cpp  Shader.cpp  Texture.cpp  Transform.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBufferLayout.cpp  Window.cpp
src/graphics/gizmo/: AxisGizmo.cpp
src/input/: Input.cpp
src/objects/: BoundaryCube.cpp  Box.cpp  CardboardBox.cpp  Cow.cpp  Plane.cpp  Spring.cpp
src/simulation/: Ball.cpp  Bunny.cpp  Cube.cpp  EnergyPanel.cpp  EnergyPlot.cpp  Simulation.cpp
